fixed buttons to not be highlighted when clicked on mobile view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -426,6 +426,7 @@ a {
     &:hover {
       transition: all 0.4s;
     }
+    -webkit-tap-highlight-color: transparent;
   }
   .buy-btn {
     flex: 2;
@@ -616,6 +617,17 @@ a {
         width: 50%;
         height: 50%;
       }
+    }
+  }
+
+  .successful-purchase-container,
+  .successful-remove-container {
+    .modal-inner {
+      font-size: 0.5em;
+      width: 80%;
+      padding: 1em 0;
+      margin-top: 50%;
+      transform: translateY(-50%);
     }
   }
 }
